--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   get: ^4.6.5
   percent_indicator: ^4.2.2
   audioplayers: ^1.0.0
-
+  numberpicker: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
