--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   percent_indicator: ^4.2.2
   audioplayers: ^1.0.0
   numberpicker: ^2.1.1
+  get_storage: ^2.0.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
